# KarantenyADostihy

./: .gitignore  Board.qml  CMakeLists.txt  Client_cs_CZ.ts  README.md  client.html  client.js  game.cpp  game.h  i686-7.3.0-release-posix-dwarf-rt_v5-rev0.7z  main.cpp
.github/workflows/: main.yml
client/: Board.qml  CMakeLists.txt  CardView.qml  Chat.qml  Client_cs_CZ.ts  Client_en_US.ts  ErrorView.qml  Field.qml  FieldView.qml  Game.qml  Lobby.qml  Player.qml  Roster.qml  Settings.qml  datamodel.cpp  datamodel.h  game.cpp  game.h  main.cpp  main.qml  qml.qrc  translations.qrc
common/: protocol.h
def/: chance.def  chance.h  fields.def  fields.h  finance.def  finance.h
server/: CMakeLists.txt  clienthandler.cpp  clienthandler.h  main.cpp  server.cpp  server.h
src/: Monopoly_cs_CZ.ts  Player.qml  game.h  main.qml  qml.qrc
